--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,10 @@
-h1 {
-  color: red;
-}
+
+// Globals
+@import "fonts.scss";
+@import "variables.scss";
+@import "scaffolding.scss";
+
+//Blocks
+@import "blocks/advantages.scss";
+@import "blocks/intro.scss";
+@import "blocks/page-header.scss";
