adds next blocks

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,8 @@
 @import "scaffolding.scss";
 
 //Blocks
+@import "blocks/about.scss";
 @import "blocks/advantages.scss";
 @import "blocks/intro.scss";
 @import "blocks/page-header.scss";
+@import "blocks/product.scss";
