--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -10,6 +10,14 @@
 
 .advantages__wrapper {
   margin-top: 110px;
+
+  @media (max-width: $tablet-width) {
+    margin-top: 52px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-top: 33px;
+  }
 }
 
 .advantages__list {
@@ -20,7 +28,7 @@
 
 .advantages__item {
   padding: 40px 40px 0 43px;
-  margin: 0 30px 35px 0;
+  margin: 0 30px 28px 0;
   width: calc(50% - 15px);
   min-height: 300px;
   border: 1px solid $smoky;
@@ -31,15 +39,6 @@
 
   &:hover {
     background-color: $blue;
-
-    .advantages__title,
-    .advantages__description {
-      color: white;
-    }
-
-    .advantages__icon {
-      stroke: white;
-    }
   }
 
   &:nth-child(2n) {
@@ -47,18 +46,32 @@
   }
 
   @media (max-width: $tablet-width) {
+    padding: 23px 22px 0 25px;
     min-height: 232px;
-    padding-left: 25px;
-    padding-right: 0;
-    padding-top: 23px;
   }
 
   @media (max-width: $mobile-width) {
     margin: 0 0 20px;
-    padding: 40px 10px 10px 25px;
-    width: calc(100% - 15px);
-    min-height: 232px;
+    padding: 30px 13px 24px 25px;
+    width: 100%;
+
+    &:nth-child(2n) {
+      padding-right: 7px;
+    }
+
+    &:nth-child(3n) {
+      padding-right: 15px;
+    }
+
+    &:nth-child(4n) {
+      padding-right: 15px;
+    }
   }
+}
+
+.advantages__title,
+.advantages__description {
+  color: white;
 }
 
 .advantages__icon {
@@ -66,16 +79,24 @@
 }
 
 .advantages__title {
-  margin: 20px 0 15px;
+  margin: 15px 0;
   font-family: $robotoCondensed;
   font-size: 24px;
   line-height: 34px;
   font-weight: 400;
   color: $blue;
 
+  @media (max-width: $tablet-width) {
+    margin: 6px 0;
+  }
+
   @media (max-width: $mobile-width) {
     font-size: 20px;
     line-height: 28px;
+
+    &:nth-child(3) {
+      margin: -3px;
+    }
   }
 }
 
@@ -86,5 +107,9 @@
 
   @media (max-width: $tablet-width) {
     padding-bottom: 20px;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding-bottom: 0;
   }
 }
