--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 //Blocks
 @import "blocks/about.scss";
 @import "blocks/advantages.scss";
+@import "blocks/feedback.scss";
 @import "blocks/intro.scss";
 @import "blocks/page-header.scss";
 @import "blocks/product.scss";
