--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,7 @@ $grey: #1b2d37;
 $dark-grey: #666666;
 $smoky: #ebebeb;
 $blue: #00b2ff;
+$light-blue: #58b9fe;
 
 $robotoCondensed: "Roboto Condensed", "Arial", sans-serif;
 $roboto: "Roboto", "Arial", sans-serif;
