--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,5 +1,5 @@
 .product {
-  padding: 90px 0 128px;
+  padding: 89px 0 130px;
   background-color: $grey;
 
   @media (max-width: $tablet-width) {
@@ -22,7 +22,7 @@
   }
 
   @media (max-width: $mobile-width) {
-    padding-left: 10px;
+    padding-left: 14px;
     margin-bottom: 42px;
     font-size: 28px;
     line-height: 39px;
@@ -32,6 +32,8 @@
 .product__list {
   display: flex;
   flex-wrap: wrap;
+
+  @include reset-list;
 }
 
 .product__item {
@@ -90,6 +92,7 @@
 }
 
 .product__description {
+  @include reset-p;
   position: absolute;
   top: 43px;
   left: 45px;
@@ -105,7 +108,7 @@
   }
 
   @media (max-width: $mobile-width) {
-    top: 21px;
-    left: 35px;
+    top: 20px;
+    left: 39px;
   }
 }
