--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,7 +6,9 @@ $retina-dppx: 1.5dppx;
 
 $grey-cloud: #788891;
 $grey: #1b2d37;
+$grey-coin: #1b2d37;
 $dark-grey: #666666;
+$grey-light: #626962;
 $smoky: #ebebeb;
 $blue: #00b2ff;
 $light-blue: #58b9fe;
