--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -23,6 +23,16 @@ img {
   vertical-align: middle;
 }
 
+.overlay {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, 0.5);
+  left: 0;
+  top: 0;
+  z-index: 100;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -39,13 +49,6 @@ img {
 a {
   text-decoration: none;
   color: white;
-}
-
-p,
-ul {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
 }
 
 .container {
