--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -97,6 +97,12 @@
   text-align: left;
   background: $light-blue;
   border: 0;
+  color: white;
+
+  &:hover,
+  &:focus {
+    color: white;
+  }
 
   &::placeholder {
     color: white;
