--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -24,7 +24,6 @@ img {
 }
 
 .overlay {
-  display: none;
   position: fixed;
   height: 100vh;
   width: 100vw;
@@ -32,6 +31,10 @@ img {
   left: 0;
   top: 0;
   z-index: 100;
+}
+
+.overlay--close {
+  display: none;
 }
 
 .visually-hidden {
