--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -29,13 +29,22 @@
 }
 
 .page-header__logo-link {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
+  display: block;
+  width: 202px;
+  height: 52px;
 
-  &:hover {
-    opacity: 0.5;
+  &:hover,
+  &:focus {
+    opacity: 0.6;
   }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.page-header__logo--mobile {
+  display: none;
 }
 
 .page-header__logo-img {
@@ -43,6 +52,21 @@
 
   @media (max-width: $mobile-width) {
     height: 38px;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .page-header__logo-link {
+    width: 38px;
+    height: 38px;
+  }
+
+  .page-header__logo--desktop {
+    display: none;
+  }
+
+  .page-header__logo--mobile {
+    display: inline-block;
   }
 }
 
