--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -39,6 +39,7 @@
 .product__item,
 .product__link {
   width: calc(33.3% - 20px);
+  min-height: 620px;
 
   &:hover {
     opacity: 0.5;
@@ -60,19 +61,21 @@
     height: 100%;
     background-color: $grey;
     opacity: 0.7;
+    z-index: 1;
   }
 
   &::after {
     content: ">";
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: 10px;
     display: flex;
     width: 60px;
     height: 60px;
     background-color: $blue;
     justify-content: space-around;
     align-items: center;
+    z-index: 1;
   }
 
   &:nth-child(3n) {
@@ -82,7 +85,11 @@
   @media (max-width: $tablet-width) {
     margin: 0 0 49px;
     width: 100%;
-    height: 256px;
+    min-height: 256px;
+
+    &::after {
+      bottom: 0;
+    }
   }
 
   @media (max-width: $mobile-width) {
@@ -91,13 +98,14 @@
 }
 
 .product__img {
+  position: absolute;
   width: 100%;
   height: auto;
 }
 
 .product__description {
   @include reset-p;
-  position: absolute;
+  position: relative;
   top: 43px;
   left: 45px;
   max-width: 170px;
